--- a/index.html
+++ b/index.html
@@ -1,194 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Six6 Affiliate Site</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<style>
-body { margin:0; font-family:'Roboto', sans-serif; background:#0f0f1a; color:#fff; overflow-x:hidden; }
-a { text-decoration:none; color:inherit; }
-header { display:flex; justify-content:space-between; align-items:center; padding:15px 20px; background:#1a1a2e; position:sticky; top:0; z-index:1000; }
-header .logo { font-size:24px; font-weight:700; color:#f7c331; }
-nav a { margin-left:15px; font-weight:500; transition:0.3s; font-size:14px; }
-nav a:hover { color:#f7c331; }
-
-/* Hero section */
-.hero { position:relative; height:80vh; display:flex; align-items:center; justify-content:center; text-align:center; overflow:hidden; background:#111; }
-.hero::before { content:""; position:absolute; top:0; left:0; width:100%; height:100%; 
-  background:url('https://picsum.photos/1200/800?blur=2') center/cover no-repeat; z-index:0; opacity:0.3; }
-
-.bird { position:absolute; width:40px; height:40px; background:url('https://upload.wikimedia.org/wikipedia/commons/3/3a/Black_bird_icon.svg') center/contain no-repeat; animation:fly 10s linear infinite; }
-@keyframes fly {0%{left:-10%;}100%{left:110%;}}
-
-/* Coins floating */
-.coin { position:absolute; width:30px; height:30px; background:url('https://upload.wikimedia.org/wikipedia/commons/1/1b/Gold_coin_icon.svg') center/contain no-repeat; animation:float 5s linear infinite; }
-@keyframes float {0%{top:100%;}50%{top:50%;}100%{top:0%;}}
-
-/* Slot reels */
-.slot-container { position:absolute; bottom:20%; left:50%; transform:translateX(-50%); display:flex; gap:10px; z-index:2; }
-.reel { width:50px; height:50px; background:#272746; border-radius:10px; display:flex; align-items:center; justify-content:center; font-size:24px; font-weight:bold; animation:spin 1s linear infinite; color:#f7c331; box-shadow:0 0 10px #f7c331; }
-@keyframes spin {0%{transform:rotateX(0deg);}100%{transform:rotateX(360deg);}}
-
-/* Hero text */
-.hero-text { position:absolute; top:35%; left:50%; transform:translate(-50%, -50%); z-index:2; }
-.hero-text h1 { font-size:38px; color:#f7c331; text-shadow:0 0 15px #f7c331; margin-bottom:10px; }
-.hero-text p { font-size:16px; margin-bottom:20px; }
-.hero-text a.signup-btn {
-  padding:20px 60px; background:linear-gradient(45deg,#f7c331,#ffea61);
-  color:#0f0f1a; font-weight:700; border-radius:50px; box-shadow:0 0 25px #f7c331; font-size:18px; display:inline-block;
-  transition:0.3s; animation:buttonPulse 2s infinite;
-}
-.hero-text a.signup-btn:hover { transform:scale(1.1); box-shadow:0 0 45px #ffea61; }
-@keyframes buttonPulse {0%{box-shadow:0 0 25px #f7c331;}50%{box-shadow:0 0 45px #ffea61;}100%{box-shadow:0 0 25px #f7c331;}}
-
-/* Counters */
-.counters { display:flex; justify-content:center; gap:20px; margin-top:20px; flex-wrap:wrap; position:relative; z-index:2; }
-.counter { text-align:center; }
-.counter h3 { font-size:24px; color:#f7c331; margin-bottom:5px; }
-.counter p { font-size:12px; color:#fff; }
-
-/* Bonus Banner */
-.bonus-banner { background:#272746; overflow:hidden; white-space:nowrap; padding:10px 0; margin:0; font-weight:700; color:#f7c331; font-size:12px; }
-.bonus-banner span { display:inline-block; padding:0 50px; animation:scroll 15s linear infinite; }
-@keyframes scroll {0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-
-/* Sections */
-.section { padding:50px 20px; text-align:center; }
-.section h2 { font-size:24px; margin-bottom:30px; color:#f7c331; text-shadow:0 0 5px #f7c331; }
-
-/* Cards */
-.bonus-cards, .games, .methods { display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:15px; }
-.card, .game-card, .method-card { background:linear-gradient(135deg,#1a1a2e,#272746); padding:20px; border-radius:15px; box-shadow:0 0 10px rgba(247,195,49,0.3); transition:0.3s; cursor:pointer; }
-.card:hover, .game-card:hover, .method-card:hover { transform:translateY(-5px) scale(1.05); box-shadow:0 0 25px rgba(247,195,49,0.8); }
-.card h3, .game-card h3, .method-card h3 { font-size:16px; margin-bottom:10px; display:flex; align-items:center; justify-content:center; flex-wrap:wrap; }
-.card h3 img, .game-card img, .method-card img { width:40px; height:40px; margin-right:5px; margin-bottom:5px; }
-.card p, .game-card p, .method-card p { font-size:12px; line-height:1.4; }
-img { width:100%; height:auto; border-radius:10px; }
-
-/* Footer */
-footer { background:#1a1a2e; text-align:center; padding:20px 10px; color:#aaa; font-size:12px; }
-
-/* WhatsApp floating button */
-.whatsapp-btn { position:fixed; bottom:15px; right:15px; background:#25d366; width:60px; height:60px; border-radius:50%; display:flex; justify-content:center; align-items:center; box-shadow:0 0 15px #25d366; transition:0.3s; z-index:999; }
-.whatsapp-btn:hover { transform:scale(1.1); box-shadow:0 0 25px #25d366; }
-.whatsapp-btn img { width:30px; }
-
-@media(max-width:768px){
-  header { flex-direction:column; padding:15px; }
-  nav { margin-top:10px; display:flex; flex-wrap:wrap; justify-content:center; }
-  nav a { margin:5px 10px; font-size:12px; }
-  .hero-text h1{font-size:28px;}
-  .hero-text p{font-size:14px;}
-  .hero-text a.signup-btn{padding:15px 45px; font-size:16px;}
-  .counters { gap:10px; }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Six6s বাজি</title>
+    <style>
+        body { margin: 0; font-family: Arial, sans-serif; background-color: #0a0a0a; color: #fff; }
+        header { background-color: #111; display: flex; justify-content: space-between; align-items: center; padding: 12px 20px; border-bottom: 2px solid #c9a227; }
+        header h1 { color: #c9a227; margin: 0; font-size: 24px; }
+        header .btn { padding: 8px 15px; border: none; cursor: pointer; border-radius: 4px; font-size: 14px; margin-left: 5px; }
+        .login { background-color: #333; color: white; }
+        .signup { background-color: #c9a227; color: black; text-decoration: none; font-weight: bold; }
+        .hero { text-align: center; background: url('https://i.ibb.co/Jv9R3nd/cricket-casino-bg.jpg') no-repeat center/cover; padding: 50px 20px; border-bottom: 2px solid #c9a227; }
+        .hero h2 { font-size: 32px; margin-bottom: 15px; text-shadow: 1px 1px 3px black; }
+        .hero .cta { background-color: #c9a227; color: black; padding: 14px 28px; border-radius: 6px; font-size: 18px; text-decoration: none; font-weight: bold; box-shadow: 0px 0px 10px rgba(201,162,39,0.7); }
+        section { padding: 20px; text-align: center; }
+        .section-title { font-size: 22px; margin-bottom: 10px; color: #c9a227; }
+        .section-text { max-width: 800px; margin: auto; font-size: 16px; line-height: 1.6; color: #ddd; }
+        .cta-btn { background-color: #c9a227; color: black; padding: 12px 20px; border-radius: 6px; text-decoration: none; display: inline-block; margin-top: 10px; font-weight: bold; }
+        .payments { display: flex; justify-content: center; gap: 15px; margin-top: 15px; flex-wrap: wrap; }
+        .payments img { height: 45px; }
+        .bonus-box { background: #111; padding: 15px; border-radius: 8px; border: 2px solid #c9a227; display: inline-block; margin: 10px; width: 120px; }
+        .bonus-box h4 { margin: 5px 0; font-size: 18px; color: #fff; }
+        .bonus-percent { color: #c9a227; font-size: 24px; font-weight: bold; }
+        footer { background-color: #111; padding: 10px; text-align: center; font-size: 12px; color: #aaa; border-top: 2px solid #c9a227; }
+        /* WhatsApp Button */
+        .whatsapp-float { position: fixed; width: 60px; height: 60px; bottom: 20px; right: 20px; background-color: #25d366; border-radius: 50%; text-align: center; box-shadow: 2px 2px 5px rgba(0,0,0,0.3); z-index: 100; }
+        .whatsapp-float img { width: 35px; margin-top: 12px; }
+    </style>
 </head>
 <body>
+    <header>
+        <h1><img src="https://i.ibb.co/0jQ7Z6P/six6s-logo.png" alt="Six6s বাজি" height="40"></h1>
+        <div>
+            <button class="btn login">লগইন</button>
+            <a href="#" class="btn signup">সাইন আপ</a>
+        </div>
+    </header>
 
-<header>
-  <div class="logo">Six6 Affiliate</div>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#deposit">Deposit</a>
-    <a href="#withdraw">Withdraw</a>
-    <a href="#bonus">Bonus</a>
-    <a href="#games">Games</a>
-    <a href="#faq">FAQ</a>
-  </nav>
-</header>
+    <div class="hero">
+        <h2>এগিয়ে থাকুন - জিতুন প্রতিদিন</h2>
+        <a href="#" class="cta">সাইন আপ</a>
+    </div>
 
-<section class="hero" id="home">
-  <!-- Multiple birds -->
-  <div class="bird" style="animation-duration:12s; top:10%; width:30px; height:30px;"></div>
-  <div class="bird" style="animation-duration:15s; top:30%; width:40px; height:40px;"></div>
-  <div class="bird" style="animation-duration:18s; top:50%; width:35px; height:35px;"></div>
+    <section>
+        <div class="bonus-box">
+            <h4>ডিপোজিট</h4>
+            <div class="bonus-percent">100%</div>
+        </div>
+        <div class="bonus-box">
+            <h4>উইথড্র</h4>
+            <div class="bonus-percent">100%</div>
+        </div>
+        <div class="bonus-box">
+            <h4>বোনাস</h4>
+            <div class="bonus-percent">100%</div>
+        </div>
+    </section>
 
-  <!-- Coins -->
-  <div class="coin" style="left:20%; animation-duration:6s;"></div>
-  <div class="coin" style="left:50%; animation-duration:5s;"></div>
-  <div class="coin" style="left:75%; animation-duration:7s;"></div>
+    <section>
+        <h3 class="section-title">আমাদের সম্পর্কে</h3>
+        <p class="section-text">
+            Six6s বাজি বাংলাদেশের সবচেয়ে জনপ্রিয় অনলাইন বেটিং প্ল্যাটফর্ম। আমরা ক্রিকেট, ফুটবল, ক্যাসিনো এবং আরও অনেক গেমের উপর বাজি ধরার সুযোগ দিয়ে থাকি। নিরাপদ পেমেন্ট সিস্টেম, দ্রুত উইথড্র এবং আকর্ষণীয় বোনাসের মাধ্যমে আমরা খেলোয়াড়দের সেরা অভিজ্ঞতা দিতে প্রতিশ্রুতিবদ্ধ।
+        </p>
+        <p class="section-text">
+            আমাদের কাস্টমার কেয়ারের সাথে সরাসরি হোয়াটসঅ্যাপে কথা বলতে হোয়াটসঅ্যাপে ক্লিক করুন। অ্যাকাউন্ট খুলতে এবং একাউন্টে যে কোন সমস্যা ২৪ ঘন্টা হোয়াটসঅ্যাপে পাওয়া যাবে। আমাদের বিশেষজ্ঞ টিম যেকোনো প্রশ্ন বা সমস্যার সমাধান দ্রুততার সাথে প্রদান করে থাকে।
+        </p>
+    </section>
 
-  <!-- Slot reels -->
-  <div class="slot-container">
-    <div class="reel">🍒</div>
-    <div class="reel">7️⃣</div>
-    <div class="reel">💰</div>
-  </div>
+    <section>
+        <h3 class="section-title">কিভাবে খেলবেন</h3>
+        <p class="section-text">
+            1. প্রথমে সাইন আপ বাটনে ক্লিক করে আপনার অ্যাকাউন্ট তৈরি করুন।<br>
+            2. বিকাশ, নগদ বা রকেট এর মাধ্যমে ডিপোজিট করুন।<br>
+            3. আপনার পছন্দের গেম বা স্পোর্টস নির্বাচন করে বাজি ধরুন।<br>
+            4. জিতলে সহজেই উইথড্র নিন।
+        </p>
+        <a href="#" class="cta-btn">এখনই সাইন আপ করুন</a>
+    </section>
 
-  <div class="hero-text">
-    <h1>Join Six6 Today!</h1>
-    <p>Sign up and enjoy bonuses, secure deposits, and fast withdrawals.</p>
-    <a href="https://6s03p15aff2025.com/af/XaiS073r/Singup" target="_blank" class="signup-btn">Sign Up Now</a>
-  </div>
+    <section>
+        <h3 class="section-title">পেমেন্ট পদ্ধতি</h3>
+        <div class="payments">
+            <img src="https://i.ibb.co/0mY1ZxZ/bkash.png" alt="বিকাশ">
+            <img src="https://i.ibb.co/5Kj1L7n/nagad.png" alt="নগদ">
+            <img src="https://i.ibb.co/4Y3LJYt/rocket.png" alt="রকেট">
+            <img src="https://i.ibb.co/0Q8JZ7y/upay.png" alt="উপায়">
+            <img src="https://i.ibb.co/0jQ7Z6P/visa.png" alt="ভিসা">
+        </div>
+    </section>
 
-  <div class="counters">
-    <div class="counter"><h3 id="users">0</h3><p>Active Users</p></div>
-    <div class="counter"><h3 id="gamesPlayed">0</h3><p>Games Played</p></div>
-    <div class="counter"><h3 id="totalWins">0</h3><p>Total Wins</p></div>
-  </div>
-</section>
+    <footer>
+        © 2025 Six6s বাজি | All Rights Reserved
+    </footer>
 
-<div class="bonus-banner">
-  <span>🎁 Welcome Bonus 100% | 🔥 Deposit Bonus 50% | 👥 Referral Bonus 10% | 💰 Spin & Win!</span>
-</div>
-
-<!-- Bonus Section -->
-<section class="section" id="bonus">
-<h2>Exclusive Bonuses</h2>
-<div class="bonus-cards">
-  <div class="card"><h3><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Golden_star_icon.svg" alt="Welcome">Welcome Bonus</h3><p>Get 100% bonus on first deposit instantly.</p></div>
-  <div class="card"><h3><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Money_icon.svg" alt="Deposit">Deposit Bonus</h3><p>Recharge your account and enjoy extra 50% bonus.</p></div>
-  <div class="card"><h3><img src="https://upload.wikimedia.org/wikipedia/commons/0/02/Referral_icon.svg" alt="Referral">Referral Bonus</h3><p>Invite friends and earn commission for each signup.</p></div>
-</div>
-</section>
-
-<!-- Remaining sections same as previous template -->
-<section class="section" id="games">
-<h2>Popular Games</h2>
-<div class="games">
-  <div class="game-card"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Dice_icon.svg" alt="Dice"><h3>Dice Game</h3><p>Try your luck and win instantly!</p></div>
-  <div class="game-card"><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Playing_cards_icon.svg" alt="Cards"><h3>Card Game</h3><p>Exciting card games with fast rewards.</p></div>
-  <div class="game-card"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Slot_machine_icon.svg" alt="Slot"><h3>Slot Game</h3><p>Spin and win amazing prizes.</p></div>
-</div>
-</section>
-
-<section class="section" id="deposit">
-<h2>Deposit Methods</h2>
-<div class="methods">
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/BKash_logo.svg" alt="bKash"><h3>bKash</h3><p>Fast and secure deposit.</p></div>
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Rocket_logo.svg" alt="Rocket"><h3>Rocket</h3><p>Instant mobile deposit.</p></div>
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Bank_icon.svg" alt="Bank"><h3>Bank Transfer</h3><p>Safe and reliable.</p></div>
-</div>
-</section>
-
-<section class="section" id="withdraw">
-<h2>Withdraw Winnings</h2>
-<div class="methods">
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/BKash_logo.svg" alt="bKash"><h3>bKash</h3><p>Fast withdrawals anytime.</p></div>
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Rocket_logo.svg" alt="Rocket"><h3>Rocket</h3><p>Instant payout.</p></div>
-  <div class="method-card"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Bank_icon.svg" alt="Bank"><h3>Bank Transfer</h3><p>Secure and reliable.</p></div>
-</div>
-</section>
-
-<footer>
-&copy; 2025 Six6 Affiliate. All rights reserved.
-</footer>
-
-<a href="https://wa.me/8801303513957" target="_blank" class="whatsapp-btn"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
-
-<script>
-// Counters
-function animateCounter(id,start,end,duration){
-  let obj=document.getElementById(id), current=start, range=end-start, increment=end>start?1:-1,
-  stepTime=Math.abs(Math.floor(duration/range));
-  let timer=setInterval(function(){ current+=increment; obj.textContent=current.toLocaleString(); if(current==end) clearInterval(timer); }, stepTime);
-}
-animateCounter('users',500,1200,3000);
-animateCounter('gamesPlayed',1000,4500,3000);
-animateCounter('totalWins',200,980,3000);
-</script>
-
+    <a href="https://wa.me/8801234567890" class="whatsapp-float" target="_blank">
+        <img src="https://i.ibb.co/0jQ7Z6P/whatsapp.png" alt="WhatsApp">
+    </a>
 </body>
 </html>
